SERVER-58780: Ensure that _shouldSetStableTimestamp restores to true if replSetInitiate fails

(cherry picked from commit 75e59101ebc9d8a4633b270a3fd44d6e2058a1b9)